envoy.yaml
!ignore dynamic_sockets:
- &admin_address {address: 0.0.0.0, port_value: 8001}
- &unstable_service_address {address: 0.0.0.0, port_value: 8080}
- &unstable_service_cl_address {address: unstable_service, port_value: 6200}
- &main_cl_address {address: 0.0.0.0, port_value: 8080}

cluster_manager:
  outlier_detection:
    event_log_path: /dev/stdout

admin:
  address:
    socket_address: *admin_address

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: *unstable_service_address

    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: unstable_service          
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
              log_format:
                json_format:
                  timestamp: "%START_TIME%"
                  envoy_protocol: "%PROTOCOL%"
                  envoy_duration: "%DURATION%"
                  envoy_request_method: "%REQ(:METHOD)%"
                  envoy_method: "%REQ(:METHOD)%"
                  envoy_path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                  envoy_response_code: "%RESPONSE_CODE%"
                  envoy_response_flags: "%RESPONSE_FLAGS%"
                  envoy_bytes_received: "%BYTES_RECEIVED%"
                  envoy_bytes_sent: "%BYTES_SENT%"
                  envoy_duration: "%DURATION%"
                  envoy_x_upstream_service_time: "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%"
                  envoy_user_agent: "%REQ(USER-AGENT)%"
                  envoy_upstream_authority: "%REQ(:AUTHORITY)%"                  
                  envoy_upstream_host: "%UPSTREAM_HOST%"                  
          http_filters:
          - name: envoy.filters.http.local_ratelimit
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
              stat_prefix: http_local_rate_limiter
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router          

          route_config:
            name: unstable_service
            virtual_hosts:
            - name: unstable_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/unstable_service"
                route:
                  prefix_rewrite: "/"
                  timeout: 0.65s
                  cluster: unstable_service
                  retry_policy:
                    retry_on: 5xx
                    num_retries: 2
                    per_try_timeout: 0.2s

                typed_per_filter_config:
                  envoy.filters.http.local_ratelimit:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                    stat_prefix: unstable_service_ratelimit
                    token_bucket:
                      max_tokens: 5
                      tokens_per_fill: 5
                      fill_interval: 1s
                    filter_enabled:
                      runtime_key: local_rate_limit_enabled
                      default_value:
                        numerator: 100
                        denominator: HUNDRED
                    filter_enforced:
                      runtime_key: local_rate_limit_enforced
                      default_value:
                        numerator: 100
                        denominator: HUNDRED

  clusters:
  - name: unstable_service
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    dns_lookup_family: V4_ONLY

    
    common_lb_config:
      healthy_panic_threshold:
        value: 0.0
    outlier_detection:
      consecutive_5xx: 10   
      base_ejection_time: 60s
      max_ejection_time: 60s
      interval: 10s
      max_ejection_percent: 100
    

    circuit_breakers:
      thresholds:
        - priority: DEFAULT
          # Значением 10 ^ 10 выключаем "circuit_breakers" от envoy
          max_connections: 1000000000
          max_pending_requests: 1000000000
          max_retries: 1000000000

    health_checks:
      - timeout: 1s
        interval: 1s
        unhealthy_interval: 10s
        healthy_threshold: 3
        unhealthy_threshold: 10
        event_log_path: /dev/stdout
        http_health_check:
          host: unstable_service:6200
          path: /

    load_assignment:
      cluster_name: unstable_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: *unstable_service_cl_address
